# lanssenger

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  GUI_DEVELOPMENT.md  GUI_DEV_GUIDE.md  README.md  WINDOWS_BUILD_GUIDE.md  build_release.sh  build_release_windows.bat  build_release_zip.sh  dmdkr.c  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
include/: common.hpp
include/client/: chat_client.hpp  chat_manager.hpp  chat_message.hpp  client.hpp  nickname_manager.hpp
include/client/gui/: createRoom.hpp  groupchatwindow.hpp  mainwindow.hpp  nickname_widget.hpp  userlistwindow.hpp
include/common/: active_users.hpp  chat_room.hpp
include/server/: server.hpp
scripts/: build_client.bat  build_client.sh  build_release_windows.bat  build_release_zip.sh
src/: client.cpp  server.cpp
src/client/: chat_client.cpp  chat_manager.cpp  chat_message.cpp  client.cpp  main.cpp  nickname_manager.cpp  test_chat.cpp
src/client/gui/: createRoom.cpp  createRoom.ui  groupchat.ui  groupchatwindow.cpp  groupchatwindow.ui  main_gui.cpp  mainwindow.cpp  mainwindow.ui  nicknameSet.ui  nickname_widget.cpp  userlistwindow.cpp  userlistwindow.ui
src/common/: active_users.cpp  chat_room.cpp
src/server/: main.cpp  server.cpp
